Added BowlingGameViewController and Storyboard accordingly to represent UI

--- a/BowlingGame/BowlingGame/Info.plist
+++ b/BowlingGame/BowlingGame/Info.plist
@@ -22,6 +22,8 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>BowlingGameViewController</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
